--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="廟語喃喃" />
     <meta property="og:description" content="廟宇是台灣人日常的風景之一，我們與廟宇之間卻是若即若離。廟語喃喃用擬人化的圖像，拉近與廟的距離。" />
-    <meta property="og:image" content="https://ding0327.github.io/Whisper/bg/banner.png" />
+    <meta property="og:image" content="https://dedmwhisper.github.io/Home/images/banner.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="./css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="./css/style.css"> <!-- Resource style -->
@@ -238,7 +238,7 @@
 				<div class="row">
 					<div class="col-lg-4 col-sm-6 cta">
 						<img src="./images/cta1.png" alt="" class="ctapic" width="80%">
-						<button id="change" class="btn btn-primary btnname">華麗轉身</button>
+						<button id="change" class="btn btn-primary btnname">華麗轉身後的</button>
 					</div>
 					<div class="col-lg-4 col-sm-6">
 						<img src="./images/cta2.png" alt="" class="ctapic" width="80%">
