--- a/index.html
+++ b/index.html
@@ -246,9 +246,7 @@
 					</div>
 					<div class="col-lg-4 col-sm-6">
 						<img src="./images/cta3.png" alt="" class="ctapic" width="80%">
-						<a href="#section4">
-							<button class="btn btn-primary btnname">來做什麼好？</button>
-						</a>
+						<button id="ctabtn" class="btn btn-primary btnname">來做什麼好？</button>
 					</div>
 				</div>
 			</div>
@@ -256,7 +254,21 @@
 	</div>
 	
 </section>
-
+<div id="ctamodal" class="ctamodal">
+	<div class="ctamodal-content">
+	  <span class="close">&times;</span>
+	  <h3>南鯤鯓代天府</h3>
+	  <hr>
+	  <h4><span class="badge badge-secondary">地點</span></h4>
+	  <p>台南市北門區976號</p>
+	  <h4><span class="badge badge-secondary">重點神明</span></h4>
+	  <p>主祀「代天巡狩」李、池、吳、朱、范 府千歲五府千歲 </p>
+	  <h4><span class="badge badge-secondary">廟宇特色</span></h4>
+	  <p>南鯤鯓代天府其歷史悠久且分香廟遍及海內外，是全臺灣王爺信仰的大本營，有「王爺總廟」之稱。五府千歲進香期是全臺規模最大、進香團最多的王爺祭典，保存完整的進香儀式和各式陣頭活動，充分展現宗教文化的藝能特色。</p>
+	  <h4><span class="badge badge-secondary">來南鯤鯓代天府你可以</span></h4>
+	  <p>南鯤鯓代天府擁有全球最壯觀黃金玉旨，凌霄寶殿內以黃金打造的純金玉旨，高6.6公尺、寬2公尺、厚60公分，造價高達新臺幣6億元。另外南鯤鯓代天府擁有一座大鯤園，園內設有南鯤鯓文史館，提供豐富的王爺信仰、歷史沿革等文史資料，也可以了解到目前分靈而出的神尊擴散全台各地及其寺廟的分布。</p>
+	</div>
+  </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://kit.fontawesome.com/3ce3b9f490.js" crossorigin="anonymous"></script>
 <script src="js/modernizr.js"></script> <!-- Modernizr -->
