--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 		<div class="row justify-content-center">
 			<div class="col-lg-10 col-sm-12 game">
 				<div class="gamestart">
+					<img src="./images/gameover.png" alt="" class="gameoverbg" width="73%">
 					<img src="./images/gamestart.png" alt="" class="gamestartbg" width="70%">
 					<button class="btn btn-primary btn-game">Start</button>
 				</div>
